# epo-code-fest-spring-2025

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  config-example-dev.yaml  config-example.yaml  pyproject.toml
backend/notebooks/: 01-retrieve_data.ipynb  02-classify_patent_nlp.ipynb  02-classify_patent_v0.1.0.ipynb  03-generate_testset.ipynb  03-generate_testset_clean.ipynb  04-GRPO.ipynb  05-creation_data.ipynb  06-creation_dataset.ipynb  06-labelisation_llm.ipynb  06-ocr-pdf.ipynb  06_1-labelisation_llm_eval.ipynb  07-1_nlp_evaluation.ipynb  07-llm_evaluation.ipynb  07-models_evaluation.ipynb  08-labelisation_llm_eval.ipynb  08-retrieval_llm.ipynb  09-retrieval_llm.ipynb  10-GRPO.ipynb  11-GRPO_opti_312.ipynb  ouput_data.jsonl  sdg_label_prompt.md  sdg_label_prompt_v1.md
backend/notebooks/Qwen3-4B-GRPO/runs/May25_01-58-10_Herivolte/: events.out.tfevents.1748131091.Herivolte.381397.0
backend/notebooks/Qwen3-4B-GRPO/runs/May25_02-08-16_Herivolte/: events.out.tfevents.1748131699.Herivolte.381397.1
backend/src/ai/evaluations/: deberta-v3-base-tasksource-nli.jsonl  llm_model_size_qwen3_1-7b.jsonl  llm_model_size_qwen3_14b.jsonl  llm_model_size_qwen3_4b.jsonl  llm_model_size_qwen3_8b.jsonl  llm_prompt_error_without_n.jsonl  llm_prompt_short_14b.jsonl  llm_prompt_short_14b_correction_human_errors.jsonl  llm_prompt_short_14b_correction_human_errors_checked copy.jsonl  llm_prompt_short_4b.jsonl  llm_reproductibility_4b.jsonl  llm_reproductibility_4b_1.jsonl  nlp_bart-large-mnli.jsonl  roberta-large-mnli.jsonl
backend/src/ai/models/: CitationPatent.py  ClassifyPatent.py  ClassifyPatentNLP.py  classify_patent.py  evaluation_results_model_v01.jsonl  evaluation_results_model_v02_zeroshot_llm_qwen25_7b.jsonl  model_base.py  model_v01.py  model_v02_zeroshot_llm.py  model_zeroshot_llm.py
backend/src/ai/models/prompt/: retrieval_sdg_prompt.py  sdg_citation_prompt.py  sdg_label_prompt.md  (+2 more)
backend/src/ai/testsets/: dataset_labeled_14B.jsonl  dataset_labeled_4B.jsonl  labeled_patents.jsonl  labelization_app.py  labelization_app_key_value.py  testset_v1_en_labeled.jsonl  testset_v1_en_raw_pat_labeled.jsonl  testset_v1_en_raw_quentin_labeled.jsonl  testset_v2_en_labeled.jsonl  testset_v3_en_labeled.jsonl
backend/src/api/: init_db.py  labelization.py  main.py
backend/src/api/config/: ai_config.py  config-example.yaml  db_config.py  logging_config.py  ops_config.py
backend/src/api/models/: Analysis.py  Applicant.py  Claim.py  Description.py  Patent.py  SDGSummary.py  Stats.py
backend/src/api/repositories/: patent_repository.py  sdg_summary_repository.py
backend/src/api/resources/: patent_resource.py
backend/src/api/services/: ops_service.py  patent_service.py
backend/src/backend/: init_db.py  main.py
backend/src/backend/config/: config-example.yaml  config.py  db_config.py  logging_config.py
backend/src/backend/models/: Claim.py  Description.py  Patent.py  SDGSummary.py
backend/src/backend/repositories/: patent_repository.py
backend/src/backend/resources/: patent_resource.py
backend/src/backend/services/: patent_service.py
(+63 files in other folders)
