[project]
name = "cep"
version = "0.1.0"
description = ""
authors = [
    {name = "RolletQuentin",email = "rolletquen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[tool.poetry.scripts]
start = "api.main:main"
dev = "api.main:dev"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.6"
jupyterlab = "^4.4.1"
jupyter = "^1.1.1"
transformers = "^4.51.3"
torch = "^2.7.0"
ollama = "^0.4.8"
langdetect = "^1.0.9"
polars = "^1.29.0"
googletrans = "^4.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
